# dua-talk

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  dictation.py  dua_talk.py  pyproject.toml  setup.py  stories.json
.takt/: retro.md  scenarios.json  stats.json
.takt/workbooks/: workbook-US-003.md  workbook-US-004.md
DuaTalk/: Package.swift
DuaTalk/DuaTalk/: DuaTalkApp.swift
DuaTalk/DuaTalk.xcodeproj/: project.pbxproj
DuaTalk/scripts/: build-release.sh  generate-icon.swift
dikta-macos/: .gitignore  Package.resolved  Package.swift  kokoro_server.py  setup.sh
dikta-macos/Dikta/: DiktaApp.swift
dikta-macos/Dikta.xcodeproj/: project.pbxproj
dikta-macos/DiktaTests/: DiktaTests.swift  EmbeddingParagraphSplitterTests.swift  FormatterTests.swift
dikta-macos/scripts/: ExportOptions.plist  build-release.sh  generate-icon.swift  test-embeddings-models.py  test-embeddings.swift  test-punctuation-model.py  test-real-dictation.py
dikta-windows/: App.xaml  App.xaml.cs  DiktaWindows.csproj  VERIFY.md
dikta-windows/Models/: AppConfig.cs  HistoryItem.cs  MicSensitivity.cs
dikta-windows/Services/: Transcriber.cs  (+11 more)
docs/: appcast.xml  architecture.md  email-formatting-conventions.md  formatter-phase1-engine.md  formatter-phase2-message.md  formatter-phase3-structure.md  formatter-phase4-integration.md  formatter-research-rules.md  formatter-spec.md  research-paragraph-science.md  research-punctuation-models.md  research-sentence-embeddings.md
python/: icon.icns  pyproject.toml
scripts/: convert-minilm-coreml.py
tasks/: prd-windows-dikta.md
(+80 files in other folders)
