[project]
name = "dua-talk"
version = "0.2.0"
description = "Dua Talk - offline dictation tool with Whisper speech-to-text"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper>=20240930",
    "sounddevice>=0.5.2",
    "numpy>=1.26.0",
    "rich>=14.0.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "ollama>=0.4.0",
    "rumps>=0.4.0",
]

[project.optional-dependencies]
build = [
    "py2app>=0.28.0,<0.28.9",
    "setuptools>=69.0.0,<80",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
